<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoPerros"
    android:background="#FFFBF2">

    <LinearLayout
        android:id="@+id/framedog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="#FFFBF2"
        app:layout_constraintBottom_toTopOf="@+id/btnBackDog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/mainFrame"
        android:layout_width="350dp"
        android:layout_height="310dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/frameresultadoperro"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/framedog"
        app:layout_constraintStart_toStartOf="@+id/framedog"
        app:layout_constraintTop_toTopOf="@+id/framedog"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv1ResultDog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="#593936"
        tools:text="@string/Your_age_Dog"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainFrameCat"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tv2Onboarding1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/textResultDog"
        android:textColorHint="#353535"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv1ResultCat"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        />

    </LinearLayout>

    <Button
        android:id="@+id/btnBackDog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backcAgain"
        android:textColor="@color/white"
        app:backgroundTint="#593936"
        app:iconTint="#593936"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsharedog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnsharedog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/white"
        app:backgroundTint="#593936"
        app:iconTint="#593936"
        android:drawableLeft="@drawable/baseline_share_24"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewResultDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintVertical_bias="0.001"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1415098456146639/6830633354">
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111"> &lt;!&ndash;Este es el de prueba&ndash;&gt;-->
        <!--ads:adUnitId="ca-app-pub-1415098456146639/6830633354" Este sería el oficial de la APP-->
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>