<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF2"
    tools:context=".ResultadoGatos">

    <LinearLayout
        android:id="@+id/framecat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="#FFFBF2"
        app:layout_constraintBottom_toTopOf="@+id/btnBackCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mainFrameCat"
            android:layout_width="350dp"
            android:layout_height="310dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/frameresultadogato"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/framecat"
            app:layout_constraintStart_toStartOf="@+id/framecat"
            app:layout_constraintTop_toTopOf="@+id/framecat"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv1ResultCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="#593936"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainFrameCat"
            app:layout_constraintVertical_bias="0.7"
            tools:text="@string/Your_age_Cat" />

        <TextView
            android:id="@+id/tv2Onboarding1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/textResultCat"
            android:textColorHint="#353535"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv1ResultCat"
            app:layout_constraintVertical_bias="0.4" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBackCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backcAgain"
        android:textColor="@color/white"
        app:backgroundTint="#593936"
        app:iconTint="#593936"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsharecat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

    <Button
        android:id="@+id/btnsharecat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/share"
        android:textColor="@color/white"
        app:backgroundTint="#593936"
        android:drawableLeft="@drawable/baseline_share_24"
        app:iconTint="#593936"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewResultCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintVertical_bias="0.002"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1415098456146639/6830633354">
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111"> &lt;!&ndash;Este es el de prueba&ndash;&gt;-->
         <!--Este sería el oficial de la APP-->
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>